fix: lower TOC breakpoint to 1700px and constrain signup card overlap

--- a/assets/css/blog/single.css
+++ b/assets/css/blog/single.css
@@ -132,7 +132,7 @@
     display: none;
 }
 
-@media (min-width: 1800px) {
+@media (min-width: 1700px) {
     .post-toc {
         display: block;
         position: fixed;
@@ -145,6 +145,10 @@
         border-left: 1px solid var(--light-gray-color);
         font-size: 1.4rem;
         line-height: 1.45;
+    }
+
+    .kg-signup-card.kg-width-full {
+        grid-column: wide;
     }
 
     .post-toc-title {
